# ClashC

./: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
exec/: env.h  exec_engine.c  exec_engine.h  proc.c  proc.h  runtime_storage.c  runtime_storage.h  runtime_val.c  runtime_val.h
lang/: ast.h  ast_expr.c  ast_expr.h  ast_stment.c  ast_stment.h  ast_stmt.c  ast_stmt.h  ast_visit.c  ast_visit.h  function.c  function.h  lang.h  lang.txt  symbol.c  symbol.h
lib/: alloc.h  common.h  diagnostics.c  diagnostics.h  str.c  str.h  util.c  util.h  vector.c  vector.h
parse/: lexer.c  lexer.h  parser.c  parser.h  token.c  token.h
parser/: lexer.h
